--- a/images/manifest.json
+++ b/images/manifest.json
@@ -7,6 +7,63 @@
   "@context" : "http://iiif.io/api/presentation/3/context.json",
   "items" : [ {
     "width" : 267,
+    "id" : "https://Bibliolej.github.io/LJ-Book_Condition_Visual_Assessment/images/anc_vg_td_inkcolor_black/canvas/",
+    "label" : {
+      "none" : [ "anc_vg_td_inkcolor_black" ]
+    },
+    "type" : "Canvas",
+    "items" : [ {
+      "id" : "https://Bibliolej.github.io/LJ-Book_Condition_Visual_Assessment/images/anc_vg_td_inkcolor_black/AnnoPage/",
+      "type" : "AnnotationPage",
+      "items" : [ {
+        "motivation" : "Painting",
+        "id" : "https://Bibliolej.github.io/LJ-Book_Condition_Visual_Assessment/images/anc_vg_td_inkcolor_black/annotation/",
+        "type" : "Annotation",
+        "body" : {
+          "service" : [ {
+            "tiles" : [ {
+              "scaleFactors" : [ 32, 16, 8, 4, 2, 1 ],
+              "width" : 1024,
+              "height" : 1024
+            } ],
+            "protocol" : "http://iiif.io/api/image",
+            "sizes" : [ {
+              "width" : 9,
+              "height" : 13
+            }, {
+              "width" : 17,
+              "height" : 25
+            }, {
+              "width" : 34,
+              "height" : 50
+            }, {
+              "width" : 67,
+              "height" : 100
+            }, {
+              "width" : 134,
+              "height" : 200
+            }, {
+              "width" : 267,
+              "height" : 400
+            } ],
+            "profile" : "http://iiif.io/api/image/2/level0.json",
+            "width" : 267,
+            "@id" : "https://Bibliolej.github.io/LJ-Book_Condition_Visual_Assessment/images/anc_vg_td_inkcolor_black",
+            "@context" : "http://iiif.io/api/image/2/context.json",
+            "height" : 400
+          } ],
+          "format" : "image/jpeg",
+          "width" : 267,
+          "id" : "https://Bibliolej.github.io/LJ-Book_Condition_Visual_Assessment/images/anc_vg_td_inkcolor_black/full/full/0/default.jpg",
+          "type" : "Image",
+          "height" : 400
+        },
+        "target" : "https://Bibliolej.github.io/LJ-Book_Condition_Visual_Assessment/images/anc_vg_td_inkcolor_black/canvas/"
+      } ]
+    } ],
+    "height" : 400
+  }, {
+    "width" : 267,
     "id" : "https://Bibliolej.github.io/LJ-Book_Condition_Visual_Assessment/images/anc_vg_bc_detaching_cover/canvas/",
     "label" : {
       "none" : [ "anc_vg_bc_detaching_cover" ]
